src/test/deca/context/valid/personalTests/println.deca
// Test PRINTLN

{
    println("Salut !");
    println(47);
    println(4.7);
    println(true);
    println(false);
}