src/test/deca/context/invalid/personalTests/MethodNoClass.deca
class A{
    void m1(){
        println("A");
    }
}

{
    int a;
    a.m1();
}